cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark__cfn_templates__Tianyi2__IRIS__data__cloudformation_collected_templates_new__template_10259_528868478.yaml
Resources:
  Vpc8378EB38:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: M1MacStack/Vpc
    Metadata:
      aws:cdk:path: M1MacStack/Vpc/Resource
  VpcPublicSubnet1Subnet5C2D37C4:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      AvailabilityZone: us-east-1b
      CidrBlock: 10.0.0.0/18
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: M1MacStack/Vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: M1MacStack/Vpc/PublicSubnet1/Subnet
  VpcPublicSubnet1RouteTable6C95E38E:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      Tags:
        - Key: Name
          Value: M1MacStack/Vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: M1MacStack/Vpc/PublicSubnet1/RouteTable
  VpcPublicSubnet1RouteTableAssociation97140677:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcPublicSubnet1RouteTable6C95E38E
      SubnetId:
        Ref: VpcPublicSubnet1Subnet5C2D37C4
    Metadata:
      aws:cdk:path: M1MacStack/Vpc/PublicSubnet1/RouteTableAssociation
  VpcPublicSubnet1DefaultRoute3DA9E72A:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VpcPublicSubnet1RouteTable6C95E38E
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VpcIGWD7BA715C
    DependsOn:
      - VpcVPCGWBF912B6E
    Metadata:
      aws:cdk:path: M1MacStack/Vpc/PublicSubnet1/DefaultRoute
  VpcPublicSubnet2Subnet691E08A3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      AvailabilityZone: us-east-1d
      CidrBlock: 10.0.64.0/18
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: M1MacStack/Vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: M1MacStack/Vpc/PublicSubnet2/Subnet
  VpcPublicSubnet2RouteTable94F7E489:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      Tags:
        - Key: Name
          Value: M1MacStack/Vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: M1MacStack/Vpc/PublicSubnet2/RouteTable
  VpcPublicSubnet2RouteTableAssociationDD5762D8:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcPublicSubnet2RouteTable94F7E489
      SubnetId:
        Ref: VpcPublicSubnet2Subnet691E08A3
    Metadata:
      aws:cdk:path: M1MacStack/Vpc/PublicSubnet2/RouteTableAssociation
  VpcPublicSubnet2DefaultRoute97F91067:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VpcPublicSubnet2RouteTable94F7E489
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VpcIGWD7BA715C
    DependsOn:
      - VpcVPCGWBF912B6E
    Metadata:
      aws:cdk:path: M1MacStack/Vpc/PublicSubnet2/DefaultRoute
  VpcIsolatedSubnet1SubnetE48C5737:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      AvailabilityZone: us-east-1b
      CidrBlock: 10.0.128.0/18
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Isolated
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: M1MacStack/Vpc/IsolatedSubnet1
    Metadata:
      aws:cdk:path: M1MacStack/Vpc/IsolatedSubnet1/Subnet
  VpcIsolatedSubnet1RouteTable4771E3E5:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      Tags:
        - Key: Name
          Value: M1MacStack/Vpc/IsolatedSubnet1
    Metadata:
      aws:cdk:path: M1MacStack/Vpc/IsolatedSubnet1/RouteTable
  VpcIsolatedSubnet1RouteTableAssociationD300FCBB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcIsolatedSubnet1RouteTable4771E3E5
      SubnetId:
        Ref: VpcIsolatedSubnet1SubnetE48C5737
    Metadata:
      aws:cdk:path: M1MacStack/Vpc/IsolatedSubnet1/RouteTableAssociation
  VpcIsolatedSubnet2Subnet16364B91:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      AvailabilityZone: us-east-1d
      CidrBlock: 10.0.192.0/18
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Isolated
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: M1MacStack/Vpc/IsolatedSubnet2
    Metadata:
      aws:cdk:path: M1MacStack/Vpc/IsolatedSubnet2/Subnet
  VpcIsolatedSubnet2RouteTable1D30AF7D:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      Tags:
        - Key: Name
          Value: M1MacStack/Vpc/IsolatedSubnet2
    Metadata:
      aws:cdk:path: M1MacStack/Vpc/IsolatedSubnet2/RouteTable
  VpcIsolatedSubnet2RouteTableAssociationF7B18CCA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcIsolatedSubnet2RouteTable1D30AF7D
      SubnetId:
        Ref: VpcIsolatedSubnet2Subnet16364B91
    Metadata:
      aws:cdk:path: M1MacStack/Vpc/IsolatedSubnet2/RouteTableAssociation
  VpcIGWD7BA715C:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: M1MacStack/Vpc
    Metadata:
      aws:cdk:path: M1MacStack/Vpc/IGW
  VpcVPCGWBF912B6E:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      InternetGatewayId:
        Ref: VpcIGWD7BA715C
    Metadata:
      aws:cdk:path: M1MacStack/Vpc/VPCGW
  M1MacHost:
    Type: AWS::EC2::Host
    Properties:
      AvailabilityZone: us-east-1d
      InstanceType: mac2.metal
    Metadata:
      aws:cdk:path: M1MacStack/M1MacHost
  MacInstanceInstanceSecurityGroup05E4CEAD:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: M1MacStack/MacInstance/InstanceSecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: from 0.0.0.0/0:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
      Tags:
        - Key: Name
          Value: M1MacStack/MacInstance
      VpcId:
        Ref: Vpc8378EB38
    Metadata:
      aws:cdk:path: M1MacStack/MacInstance/InstanceSecurityGroup/Resource
  MacInstanceInstanceRole6AE0A67C:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
        Version: "2012-10-17"
      Tags:
        - Key: Name
          Value: M1MacStack/MacInstance
    Metadata:
      aws:cdk:path: M1MacStack/MacInstance/InstanceRole/Resource
  MacInstanceInstanceProfile1EAFCA4B:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: MacInstanceInstanceRole6AE0A67C
    Metadata:
      aws:cdk:path: M1MacStack/MacInstance/InstanceProfile
  MacInstanceE259BECC:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: us-east-1d
      HostId:
        Fn::GetAtt:
          - M1MacHost
          - HostId
      IamInstanceProfile:
        Ref: MacInstanceInstanceProfile1EAFCA4B
      ImageId: ami-01a9da8de3d589094
      InstanceType: mac2.metal
      KeyName: macOS-for-Flutter
      SecurityGroupIds:
        - Fn::GetAtt:
            - MacInstanceInstanceSecurityGroup05E4CEAD
            - GroupId
      SubnetId:
        Ref: VpcPublicSubnet2Subnet691E08A3
      Tags:
        - Key: Name
          Value: M1MacStack/MacInstance
      Tenancy: host
      UserData:
        Fn::Base64: ""
    DependsOn:
      - MacInstanceInstanceRole6AE0A67C
    Metadata:
      aws:cdk:path: M1MacStack/MacInstance/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/12QMY/CMAyFfwt7mhO95VbEAGxVe2I9pcYIQ2ujxAGhqv+dQNurxOTnz09+lnP7/WOXC3cPGRwuWUO17Sp1cDEJ/XUIue32VzDrI++LtSli3RBUsWbUF5tVKVHx19UNznxmqxAEyCkJ/5tN4enmFOcdO1b0SW8SvbvHGDp2K01nnVrkt3UrQc2OgzoGNBVC9KSPjZd4fed/gsnaG3Kt7UoZ7pzqNC68HKnBvjclBokeBteoe8NyQHsOX7dl+lqeHncORJmPrNSiLYf6BGSRod9UAQAA
    Metadata:
      aws:cdk:path: M1MacStack/CDKMetadata/Default
Parameters:
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
Rules:
  CheckBootstrapVersion:
    Assertions:
      - Assert:
          Fn::Not:
            - Fn::Contains:
                - - "1"
                  - "2"
                  - "3"
                  - "4"
                  - "5"
                - Ref: BootstrapVersion
        AssertDescription: CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.
